# esp32_threads_i2c_gpio

./: CMakeLists.txt  README.rst  prj.conf
boards/: esp32v1.overlay
src/: main.c
